[project]
name = "unsupervised-elicitation"
version = "0.1.0"
description = "Work for the project Praxis Labs: Unsupervised Elicitation"
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
